force-app/main/default/objects/B25__Hover_Field__c/B25__Hover_Field__c.object-meta.xml
<CustomObject>
    <description>Configuration for a popup window containing information about a specific Reservation, that shows up when hovering that Reservation on a Calendar with the mouse.</description>
    <label>Hover Field</label>
    <nameField>
        <label>Hover Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hover Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>