force-app/main/default/objects/B25__Hover_Field__c/fields/B25__Flow_Name__c.field-meta.xml
<CustomField>
    <fullName>B25__Flow_Name__c</fullName>
    <description>Name of the flow calculating the dynamic flow hover field</description>
    <label>Flow Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>