force-app/main/default/objects/B25__Hover_Field__c/fields/B25__Label__c.field-meta.xml
<CustomField>
    <fullName>B25__Label__c</fullName>
    <description>The label as shown in the Hover Field on the Calendar.</description>
    <inlineHelpText>Le libellé tel qu’il apparaît dans le champ de survol du calendrier.</inlineHelpText>
    <label>Label</label>
    <length>35</length>
    <type>Text</type>
</CustomField>