force-app/main/default/objects/B25__Hover_Field__c/fields/B25__Order__c.field-meta.xml
<CustomField>
    <fullName>B25__Order__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Used to determine the order of Hover Fields on the popup window.</description>
    <inlineHelpText>Utilisé pour déterminer l’ordre des champs de survol sur la fenêtre contextuelle.</inlineHelpText>
    <label>Order</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>