force-app/main/default/objects/B25__Hover_Field__c/fields/B25__Reservation_Display__c.field-meta.xml
<CustomField>
    <fullName>B25__Reservation_Display__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Hover Definition this Hover Field record will be shown on.</description>
    <inlineHelpText>La définition de survol sur laquelle cet enregistrement de champ de survol sera affiché.</inlineHelpText>
    <label>Hover Definition</label>
    <referenceTo>B25__Reservation_Display__c</referenceTo>
    <relationshipLabel>Hover Fields</relationshipLabel>
    <relationshipName>Hover_Fields</relationshipName>
    <type>Lookup</type>
</CustomField>