force-app/main/default/objects/B25__Hover_Field__c/recordTypes/B25__Dynamic_Flow_Hover_Field.recordType-meta.xml
<RecordType>
    <fullName>B25__Dynamic_Flow_Hover_Field</fullName>
    <active>true</active>
    <label>Dynamic Flow Hover Field</label>
</RecordType>