force-app/main/default/objects/B25__Hover_Field__c/recordTypes/B25__Static_Hover_Field.recordType-meta.xml
<RecordType>
    <fullName>B25__Static_Hover_Field</fullName>
    <active>true</active>
    <label>Static Hover Field</label>
</RecordType>